[workspace]
members = [
    "day_1_1",
    "day_1_2",
    "day-2-1",
    "day-2-2",
    "day-3",
    "day-3-2",
    "day-4-1",
    "day-4-2",
    "day-5-1",
    "day-5-2",
    "day-6-1",
    "day-6-2",
]

[profile.release]
# Panics should only be caused by logic errors and are considered bugs
panic = 'abort'
# Link time Optimization
lto = true
